# solvik-siegl

./: .env.example  middleware.ts  next.config.mjs  package-lock.json  package.json  supabase-migration-v2.sql  supabase-migration-v3.sql  supabase-migrations.sql  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/admin/: layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
app/pricing/: page.tsx
app/store/: page.tsx
app/terms/: page.tsx
components/: AdminHeader.tsx  BubbleBackground.tsx  DashboardHome.tsx  HeroTitle.tsx  InactivityTimer.tsx  InfoTip.tsx  LanguageProvider.tsx  LanguageSwitcher.tsx  OnboardingCard.tsx  SeasonalBackground.tsx  ToastProvider.tsx  VerifyCard.tsx  WalletAuthButton.tsx
contracts/siegl_payments/: Anchor.toml  package.json  rust-toolchain.toml
contracts/siegl_payments/programs/siegl_payments/: Cargo.toml
contracts/siegl_payments/programs/siegl_payments/src/: lib.rs
hooks/: useSessionGuard.ts
lib/: arweave.ts  cnft.ts  generate-pdf.ts  i18n.ts  sas.ts  shdwdrive.ts  sns.ts  solana-pay.ts  supabase.ts  wallet-auth.ts
lib/altcha/: index.ts
lib/arweave/: calculate-cost.ts  index.ts  upload.ts
lib/auth/: create-session.ts  index.ts
lib/certificates/: attestation.ts  generate-pdf.ts  index.ts  validate-file.ts
lib/cnft/: create-tree.ts  provision.ts
lib/contract/: index.ts  record-certificate.ts  register-issuer.ts  verify-subscription.ts
lib/payments/: execute-split.ts  index.ts  splits.ts  subscription.ts
lib/sns/: index.ts
public/: manifest.json  robots.txt  sw.js
scripts/: create-shadow-account.mjs
(+60 files in other folders)
