[package]
name = "siegl_payments"
version = "0.1.0"
description = "Solvik Studio payment smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "siegl_payments"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
